# mac68k-jit-xtensa

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  INSTRUCTIONS.md  PLAN.md  README.md  STATUS.md
boards/papers3/: .gitignore  CMakeLists.txt  GET_EPD.md  README.md  partitions.csv  scripts_qemu_selftest.sh  sdkconfig.defaults  sdkconfig.qemu
boards/papers3/components/mac68k/: CMakeLists.txt  jit_trampolines.S  mac68k_target.c
boards/papers3/main/: CMakeLists.txt  app_main.c  battery.c  battery.h  board_papers3.h  eink_fastepd.cpp  eink_fastepd.h  idf_component.yml  sd_disk.c  sd_disk.h  touch.c  touch.h  uart_ctl.c  uart_ctl.h
build_histo/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  mac68k_host
build_histo/gui/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_histo/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
core/: demo_rom.c  demo_rom.h  m68k_asm.h  m68k_cpu.h  m68k_interp.c  m68k_interp.h  mac_input.c  mac_input.h  mac_iwm.c  mac_iwm.h  mac_mem.c  mac_mem.h  mac_scsi.c  mac_scsi.h  mac_snd.c  mac_snd.h  sony.c  sony.h
gui/: CMakeLists.txt  mac_gui.c  protocol.h
include/: m68k_types.h
jit/: codecache.c  codecache.h  codegen.c  codegen.h  dispatcher.c  dispatcher.h  emit_xtensa.c  emit_xtensa.h  xtensa_sim.c  xtensa_sim.h
port/esp32s3/: CMakeLists.txt  sdkconfig.defaults
port/esp32s3/components/mac68k/: CMakeLists.txt  jit_trampolines.S  mac68k_target.c
port/esp32s3/main/: CMakeLists.txt  app_main.c
port/host/: main.c
roms/: get_infinite.sh
scripts/: bench.sh  bmp2png_grid.py  boot.sh  build-minivmac-iix.sh  build.sh  diff.sh  evict_sweep.csv  evict_sweep.sh  evict_sweep_plot.py  framediff.sh  gui.sh  idf_env.sh  parity.sh  run_qemu_s3.sh  se30-cmd-sweep.sh  snap-cycle100m.sh  snap-cycle30m.sh  snap-extra-bench.sh  snap-se30-reset.sh  snap-thinkc-bullseye.sh  snap-thinkc8.sh  test.sh
tests/: CMakeLists.txt  test_encoder.c  test_interp.c  test_jit.c  test_prefetch.c
tools/: build_mvmac_diff.sh  build_se30_trace.sh  minem_glue.c  mvmac_diff.c  se30_trace.c
